fix(overflow) : overflow and scrollbar in phone responsive

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@
 
 @layer base {
   body {
-    @apply bg-gray-50 text-gray-900;
+    @apply bg-gray-50 text-gray-900; 
     direction: rtl;
   }
 }
-
+ 
 body {
   margin: 0;
   font-family: 'Iran Sans', Vazir, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,7 +20,7 @@ body {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: rgba(100, 100, 100, 0.5) transparent;
+  scrollbar-color: #6f6f6f transparent;
 }
 
 
@@ -159,12 +159,12 @@ code {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(100, 100, 100, 0.5); 
+  background-color: #202936; 
   border-radius: 10px; 
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(100, 100, 100, 0.8);
+  background-color: #202936;
 }
 
 ::-webkit-scrollbar-track {
